--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
     
+    <EditText
+        android:layout_width="fill_parent"
+        android:layout_height="30dp"
+        android:inputType="text"
+        android:id="@+id/txtCountrySearch"
+        />
+    
     <ListView
 	  android:id="@android:id/list"
 	  android:layout_width="match_parent"
-	  android:layout_height="wrap_content" >
+	  android:layout_height="wrap_content"
+	  android:layout_below="@id/txtCountrySearch" >
 	</ListView> 
 
-</LinearLayout>
+</RelativeLayout>
